@@ -6,6 +6,7 @@ import com.google.protobuf.Message;
 import com.google.protobuf.ProtocolStringList;
 import com.hazelcast.core.HazelcastInstance;
 import com.hazelcast.map.IMap;
+import com.hazelcast.map.listener.EntryExpiredListener;
 import org.apache.arrow.flight.*;
 import org.apache.arrow.flight.sql.BasicFlightSqlProducer;
 import org.apache.arrow.flight.sql.SqlInfoBuilder;
@@ -23,8 +24,8 @@ import java.io.Serializable;
 import java.io.UncheckedIOException;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
+import java.util.*;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.Objects;
@@ -37,7 +38,6 @@ import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 import static com.google.protobuf.ByteString.copyFrom;
-import static java.lang.String.format;
 import static java.util.UUID.randomUUID;
 
 /**
@@ -46,8 +46,8 @@ import static java.util.UUID.randomUUID;
 public class HadoopFlightSqlService extends BasicFlightSqlProducer implements FlightProducer, AutoCloseable {
     private static final Logger LOGGER = LoggerFactory.getLogger(HadoopFlightSqlService.class);
 
-    private static final String KEY_DELIMITER = ":";
     private static final String SERVER_REGISTRY_MAP = "server-registry";
+    private static final String STATEMENT_CACHE_MAP = "statement-cache";
 
     private final Location location;
     private final ParquetManager parquetManager;
@@ -55,8 +55,7 @@ public class HadoopFlightSqlService extends BasicFlightSqlProducer implements Fl
     private final HazelcastInstance hazelcastInstance;
     private final SqlInfoBuilder sqlInfoBuilder;
     private final IMap<String, Serializable> statementCache;
-    private final IMap<String, String> serverRegistry;
-    private final String serverRegistrationKey;
+    private final IMap<String, Long> serverRegistry;
 
     public HadoopFlightSqlService(Location location, ParquetManager parquetManager,
             BufferAllocator allocator, HazelcastInstance hazelcastInstance) {
@@ -64,10 +63,25 @@ public class HadoopFlightSqlService extends BasicFlightSqlProducer implements Fl
         this.parquetManager = Objects.requireNonNull(parquetManager);
         this.allocator = Objects.requireNonNull(allocator);
         this.hazelcastInstance = Objects.requireNonNull(hazelcastInstance);
-        this.statementCache = hazelcastInstance.getMap("statement-cache");
+        this.statementCache = hazelcastInstance.getMap(STATEMENT_CACHE_MAP);
         this.serverRegistry = hazelcastInstance.getMap(SERVER_REGISTRY_MAP);
-        this.serverRegistrationKey = "~srv~:" + randomUUID();
-        serverRegistry.put(serverRegistrationKey, location.getUri().toString());
+
+        String uri = location.getUri().toString();
+        LOGGER.info("Registering server: {}", uri);
+        serverRegistry.put(uri, 0L);
+
+        statementCache.addLocalEntryListener((EntryExpiredListener<String, Serializable>) event -> {
+            Serializable value = event.getOldValue();
+            if (value instanceof HandleState state && state.serverUri() != null) {
+                serverRegistry.compute(state.serverUri(), (k, v) -> {
+                    if (v == null) {
+                        return null;
+                    }
+                    long updated = v - state.bytes();
+                    return updated <= 0 ? 0L : updated;
+                });
+            }
+        });
 
         sqlInfoBuilder = new SqlInfoBuilder();
 
@@ -79,7 +93,6 @@ public class HadoopFlightSqlService extends BasicFlightSqlProducer implements Fl
                 .withFlightSqlServerSql(true)
                 .withFlightSqlServerSubstrait(false)
                 .withFlightSqlServerTransaction(FlightSql.SqlSupportedTransaction.SQL_SUPPORTED_TRANSACTION_NONE)
-                // .withSqlIdentifierQuoteChar()
                 .withSqlDdlCatalog(false)
                 .withSqlDdlSchema(true)
                 .withSqlDdlTable(true)
@@ -88,8 +101,6 @@ public class HadoopFlightSqlService extends BasicFlightSqlProducer implements Fl
                 .withSqlAllTablesAreSelectable(true)
                 .withSqlNullOrdering(FlightSql.SqlNullOrdering.SQL_NULLS_SORTED_AT_END)
                 .withSqlMaxColumnsInTable(1000);
-        // .withFlightSqlServerBulkIngestion(false)
-        // .withFlightSqlServerBulkIngestionTransaction(false);
 
         LOGGER.info("{} initialized", getClass().getName());
     }
@@ -101,59 +112,90 @@ public class HadoopFlightSqlService extends BasicFlightSqlProducer implements Fl
         try {
             if (request instanceof FlightSql.TicketStatementQuery statementQuery) {
                 final ByteString handle = statementQuery.getStatementHandle();
-                String query = (String) Objects.requireNonNull(statementCache.get(cacheKey(handle, "query")));
-                Map<String, Set<String>> pathLocations = parquetManager.locationsForQuery(query);
+                HandleState outerState = (HandleState) statementCache.get(handle.toStringUtf8());
+                String query = outerState.query();
+                Map<String, FileAssignment> pathLocations = parquetManager.locationsForQuery(query);
 
-                // All registered Flight servers, sorted for deterministic file assignment.
-                List<String> allServerUris = new ArrayList<>(serverRegistry.values());
-                Collections.sort(allServerUris);
-                if (allServerUris.isEmpty()) {
-                    allServerUris = List.of(location.getUri().toString());
+                // All registered Flight servers.
+                Set<String> allServerUris = new HashSet<>();
+                for (var entry : serverRegistry.entrySet()) {
+                    allServerUris.add(entry.getKey());
                 }
+                if (allServerUris.isEmpty()) {
+                    LOGGER.info("Server registry is empty, please restart server for registration");
+                    allServerUris = Set.of(location.getUri().toString());
+                }
+
+                // Read current server loads from Hazelcast in one bulk call.
+                Map<String, Long> serverLoad = new HashMap<>(serverRegistry.getAll(allServerUris));
+                for (String uri : allServerUris) {
+                    serverLoad.putIfAbsent(uri, 0L);
+                }
+
+                // PATH A: JOIN
 
                 // One endpoint per server: group files by their assigned server so each
                 // server streams all its partial aggregation rows in a single response.
                 ParquetQueryParser pq = ParquetQueryParser.parse(query);
-                List<String> sortedPaths = pathLocations.keySet().stream().sorted().collect(Collectors.toList());
 
                 if (pq.isJoin) {
                     String allFilesServer = findServerWithAllFiles(pathLocations, allServerUris);
                     if (allFilesServer != null) {
-                        LOGGER.info("Join executes server-side on {} with {} file(s)", allFilesServer, sortedPaths.size());
-                        return List.of(createEndpoint(allFilesServer, sortedPaths, query));
+                        LOGGER.info("Join executes server-side on {} with {} file(s)", allFilesServer, pathLocations.size());
+                        long addedBytes = pathLocations.values().stream().mapToLong(FileAssignment::size).sum();
+                        FlightEndpoint ep = createEndpoint(allFilesServer, pathLocations.keySet().stream().toList(), query, addedBytes);
+                        serverRegistry.compute(allFilesServer, (k, v) -> (v == null ? 0L : v) + addedBytes);
+                        return List.of(ep);
                     }
                     LOGGER.info("Join query spans multiple servers; splitting into per-table reads for Spark-side join");
                     List<FlightEndpoint> endpoints = new ArrayList<>();
                     Map<String, Set<String>> seenTables = new LinkedHashMap<>();
-                    for (String path : sortedPaths) {
+                    for (String path : pathLocations.keySet()) {
                         String table = extractTableFromPath(path);
                         seenTables.computeIfAbsent(table, k -> new LinkedHashSet<>()).add(path);
                     }
                     for (Map.Entry<String, Set<String>> entry : seenTables.entrySet()) {
                         String table = entry.getKey();
-                        List<String> tablePaths = new ArrayList<>(entry.getValue());
                         String perTableQuery = "SELECT * FROM " + table;
-                        Map<String, List<String>> byServer = groupFilesByServer(pathLocations, allServerUris, tablePaths);
+                        Map<String, List<String>> byServer = groupFilesByServer(pathLocations, serverLoad);
 
                         for (Map.Entry<String, List<String>> e : byServer.entrySet()) {
-                            endpoints.add(createEndpoint(e.getKey(), e.getValue(), perTableQuery));
+                            long addedBytes = e.getValue().stream()
+                                    .mapToLong(p -> pathLocations.get(p).size())
+                                    .sum();
+                            endpoints.add(createEndpoint(e.getKey(), e.getValue(), perTableQuery, addedBytes));
+                            serverRegistry.compute(e.getKey(), (k, v) -> (v == null ? 0L : v) + addedBytes);
                         }
                     }
                     return endpoints;
                 }
 
-                // Non-join: existing per-server file grouping logic.
-                Map<String, List<String>> serverToFiles = groupFilesByServer(pathLocations, allServerUris, sortedPaths);
+                // PATH B: OTHER
+
+                // Group files by assigned server. Data locality is the primary criterion;
+                // among eligible servers, pick the one with the smallest cumulative load.
+                Map<String, List<String>> serverToFiles = new LinkedHashMap<>();
+                Map<String, Long> serverAdditions = new HashMap<>();
+                for (Map.Entry<String, FileAssignment> entry : pathLocations.entrySet()) {
+                    String path = entry.getKey();
+                    FileAssignment fa = entry.getValue();
+                    String bestServer = pickServer(fa.hosts(), serverLoad);
+                    serverToFiles.computeIfAbsent(bestServer, k -> new ArrayList<>()).add(path);
+                    serverLoad.merge(bestServer, fa.size(), Long::sum);
+                    serverAdditions.merge(bestServer, fa.size(), Long::sum);
+                }
 
                 List<FlightEndpoint> endpoints = new ArrayList<>();
                 for (Map.Entry<String, List<String>> entry : serverToFiles.entrySet()) {
                     String serverUri = entry.getKey();
                     List<String> serverFiles = entry.getValue();
-
-                    endpoints.add(createEndpoint(serverUri, serverFiles, query));
+                    long addedBytes = serverAdditions.getOrDefault(serverUri, 0L);
+                    endpoints.add(createEndpoint(serverUri, serverFiles, query, addedBytes));
+                    serverRegistry.compute(serverUri, (k, v) -> (v == null ? 0L : v) + addedBytes);
                 }
-                LOGGER.info("determineEndpoints: {} server endpoint(s) for {} file(s), query: {}",
-                        endpoints.size(), sortedPaths.size(), query);
+                LOGGER.info("determineEndpoints: {} server(s) registered, {} endpoint(s) for {} file(s), query: {}",
+                        allServerUris.size(), endpoints.size(), pathLocations.size(), query);
+                LOGGER.debug("determineEndpoints: servers={}, files={}", allServerUris, pathLocations.keySet());
                 return endpoints;
             } else {
                 Ticket ticket = new Ticket(Any.pack(request).toByteArray());
@@ -164,12 +206,11 @@ public class HadoopFlightSqlService extends BasicFlightSqlProducer implements Fl
         }
     }
 
-    private Map<String, List<String>> groupFilesByServer(Map<String, Set<String>> pathLocations, List<String> allServerUris, List<String> sortedPaths) {
+    private Map<String, List<String>> groupFilesByServer(Map<String, FileAssignment> pathLocations, Map<String, Long> serverLoad) {
         Map<String, List<String>> serverToFiles = new LinkedHashMap<>();
-        for (int i = 0; i < sortedPaths.size(); i++) {
-            String path = sortedPaths.get(i);
-            String serverUri = pickServer(pathLocations.get(path), allServerUris, i);
-            serverToFiles.computeIfAbsent(serverUri, k -> new ArrayList<>()).add(path);
+        for (Map.Entry<String, FileAssignment> entry : pathLocations.entrySet()) {
+            String serverUri = pickServer(entry.getValue().hosts(), serverLoad);
+            serverToFiles.computeIfAbsent(serverUri, k -> new ArrayList<>()).add(entry.getKey());
         }
         return serverToFiles;
     }
@@ -382,7 +423,7 @@ public class HadoopFlightSqlService extends BasicFlightSqlProducer implements Fl
         FlightSql.TicketStatementQuery ticket = FlightSql.TicketStatementQuery.newBuilder().setStatementHandle(handle)
                 .build();
 
-        statementCache.put(cacheKey(handle, "query"), query, 10, TimeUnit.MINUTES);
+        statementCache.put(handle.toStringUtf8(), HandleState.forQuery(query), 10, TimeUnit.MINUTES);
 
         return getFlightInfoForSchema(ticket, descriptor, arrowSchema);
     }
@@ -414,12 +455,18 @@ public class HadoopFlightSqlService extends BasicFlightSqlProducer implements Fl
     public void getStreamStatement(FlightSql.TicketStatementQuery ticket, CallContext context,
             ServerStreamListener listener) {
         final ByteString handle = ticket.getStatementHandle();
-        String query = (String) Objects.requireNonNull(statementCache.get(cacheKey(handle, "query")));
+        HandleState state = (HandleState) statementCache.get(handle.toStringUtf8());
+        if (state == null) {
+            String msg = "No HandleState found in cache for handle: " + handle;
+            LOGGER.error(msg);
+            listener.error(new IllegalStateException(msg));
+            return;
+        }
 
-        // Per-server ticket: this server owns all files in the "files" list.
-        String[] filePaths = (String[]) statementCache.get(cacheKey(handle, "files"));
+        String query = state.query();
+        String[] filePaths = state.filePaths();
         if (filePaths == null) {
-            String msg = "No 'files' entry found in cache for handle: " + handle;
+            String msg = "No file paths in handle state: " + handle;
             LOGGER.error(msg);
             listener.error(new IllegalStateException(msg));
             return;
@@ -427,26 +474,32 @@ public class HadoopFlightSqlService extends BasicFlightSqlProducer implements Fl
 
         LOGGER.info("Server-grouped getStream: {} file(s), query='{}'", filePaths.length, query);
         try {
-            // readParquet delegates to executeAggregation for aggregation queries.
-            // Both paths receive all files at once → single FileSystemDatasetFactory
-            // lets Arrow Dataset's internal C++ thread pool parallelise the scan.
             parquetManager.readParquet(allocator, query, filePaths, listener, true);
             listener.completed();
         } catch (Exception e) {
             LOGGER.error("Failed to process server-grouped ticket, files: {}", Arrays.toString(filePaths), e);
             listener.error(e);
+        } finally {
+            if (state.serverUri() != null) {
+                statementCache.remove(handle.toStringUtf8());
+                serverRegistry.compute(state.serverUri(), (k, v) -> {
+                    if (v == null) return null;
+                    long updated = v - state.bytes();
+                    return updated <= 0 ? 0L : updated;
+                });
+            }
         }
     }
 
     /** Returns a server URI that has ALL files in the map, or null if none does. */
-    private String findServerWithAllFiles(Map<String, Set<String>> pathLocations,
-            List<String> allServerUris) {
+    private String findServerWithAllFiles(Map<String, FileAssignment> pathLocations,
+            Set<String> allServerUris) {
         outer:
         for (String serverUri : allServerUris) {
             String normServer = HostUtils.normalize(serverUri);
-            for (Set<String> hosts : pathLocations.values()) {
+            for (FileAssignment fa : pathLocations.values()) {
                 boolean hasHost = false;
-                for (String host : hosts) {
+                for (String host : fa.hosts()) {
                     if (HostUtils.normalize(host).equals(normServer)) {
                         hasHost = true;
                         break;
@@ -467,13 +520,13 @@ public class HadoopFlightSqlService extends BasicFlightSqlProducer implements Fl
     }
 
     private FlightEndpoint createEndpoint(String serverUri, List<String> serverFiles,
-            String query) {
+            String query, long addedBytes) {
         URI parsedUri = URI.create(serverUri);
         Location serverLoc = Location.forGrpcInsecure(parsedUri.getHost(), parsedUri.getPort());
         ByteString serverHandle = copyFrom(randomUUID().toString().getBytes(StandardCharsets.UTF_8));
-        statementCache.put(cacheKey(serverHandle, "query"), query, 10, TimeUnit.MINUTES);
-        statementCache.put(cacheKey(serverHandle, "files"),
-                serverFiles.toArray(new String[0]), 10, TimeUnit.MINUTES);
+        statementCache.put(serverHandle.toStringUtf8(),
+                HandleState.forServerFiles(query, serverFiles.toArray(new String[0]), serverUri, addedBytes),
+                10, TimeUnit.MINUTES);
         Ticket serverTicket = new Ticket(Any.pack(
                 FlightSql.TicketStatementQuery.newBuilder().setStatementHandle(serverHandle).build())
                 .toByteArray());
@@ -483,55 +536,35 @@ public class HadoopFlightSqlService extends BasicFlightSqlProducer implements Fl
     @Override
     public void close() throws Exception {
         try {
-            serverRegistry.remove(serverRegistrationKey);
+            serverRegistry.remove(location.getUri().toString());
         } catch (Throwable t) {
-            // Hazelcast may already be shut down; log and continue.
             LOGGER.warn("Failed to deregister server from registry: {}", t.getMessage());
         }
-        // Don't clear statementCache: doing so would wipe other servers' in-flight
-        // entries
-        // from the shared distributed map. Individual statement entries expire after 10
-        // min.
         AutoCloseables.close(allocator);
     }
 
     /**
-     * Picks the Flight server URI that should handle a given file.
-     * Prefers a server whose hostname matches one of the file's block hosts (data
-     * locality).
-     * Falls back to round-robin when all servers share the same host (e.g.,
-     * localhost in tests)
-     * or when no server matches any block host.
+     * Picks the Flight server URI with the smallest cumulative load.
+     * Prefers a server whose hostname matches one of the file's block hosts
+     * (data locality) when not all servers are equally local.
      */
-    private static String pickServer(Set<String> fileHosts, List<String> allServerUris, int fileIndex) {
+    private static String pickServer(Set<String> fileHosts, Map<String, Long> serverLoad) {
         Set<String> normalizedFileHosts = fileHosts.stream()
                 .map(HostUtils::normalize)
                 .collect(Collectors.toSet());
 
-        List<String> localServers = allServerUris.stream()
+        var localServers = serverLoad.keySet().stream()
                 .filter(uri -> normalizedFileHosts.contains(HostUtils.normalize(uri)))
-                .collect(Collectors.toList());
+                .toList();
 
-        if (!localServers.isEmpty() && localServers.size() < allServerUris.size()) {
-            return localServers.get(fileIndex % localServers.size());
-        }
-        return allServerUris.get(fileIndex % allServerUris.size());
+        boolean hasLocality = !localServers.isEmpty() && localServers.size() < serverLoad.size();
+        var candidates = hasLocality ? localServers : List.copyOf(serverLoad.keySet());
+        return candidates.stream().min(Comparator.comparingLong(serverLoad::get)).orElseThrow();
     }
 
     protected <T extends Message> FlightInfo getFlightInfoForSchema(T request, FlightDescriptor descriptor,
             Schema schema) {
         final List<FlightEndpoint> endpoints = determineEndpoints(request, descriptor, schema);
         return new FlightInfo(schema, descriptor, endpoints, -1, -1);
-    }
-
-    private String cacheKey(ByteString handle, String... keys) {
-        Objects.requireNonNull(handle);
-        Objects.requireNonNull(keys);
-        if (Arrays.stream(keys).anyMatch(key -> key == null || key.contains(KEY_DELIMITER))) {
-            throw new IllegalArgumentException(
-                    "Keys can't be empty or contain '" + KEY_DELIMITER + "'. But got " + String.join(",", keys));
-        }
-
-        return handle.toStringUtf8() + KEY_DELIMITER + String.join(":", keys);
     }
 }
